# news_meme_ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  python-tests.yml
app/: __init__.py
app/api/: __init__.py  middleware.py  routes.py
app/config/: settings.py
app/models/: schemas.py
app/services/: __init__.py  news_service.py  news_to_ai_service.py
tests/: conftest.py  test_api.py
