[tool.poetry]
name = "news-meme-ai"
version = "0.1.0"
description = "Feed.fun API - Where Crypto News Meets Memes in the World of Crypto"
authors = ["Feed.fun <info@feed.fun>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
httpx = "^0.26.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
transformers = "^4.37.2"
aiohttp = "^3.9.1"
huggingface-hub = "^0.20.3"
starlette = "^0.36.3"
pytest-asyncio = "^0.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = "test_*.py"